# minja

./: Makefile  README.md  pyproject.toml  todo.txt
.github/workflows/: python-package.yaml
src/minja/: __init__.py  minja.py
src/samples/: simple.py
src/test/: test_template.py
